[gd_scene load_steps=3 format=3 uid="uid://bpbc81lwktlxs"]

[ext_resource type="Script" uid="uid://b6e84r7fxxg4h" path="res://autoloads/lobby.gd" id="1_485el"]
[ext_resource type="Theme" uid="uid://bwgdrcgopd0s1" path="res://lobby/lobby_theme.tres" id="1_boshi"]

[node name="Lobby" type="Node"]
script = ExtResource("1_485el")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 64

[node name="MessageContainer" type="Panel" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_boshi")
theme_type_variation = &"Darker"

[node name="PlayerDisconnected" type="MarginContainer" parent="CanvasLayer/MessageContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -105.0
offset_right = 225.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MessageContainer/PlayerDisconnected"]
layout_mode = 2

[node name="Player" type="Label" parent="CanvasLayer/MessageContainer/PlayerDisconnected/VBoxContainer"]
layout_mode = 2
text = "Player disconnected"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/MessageContainer/PlayerDisconnected/VBoxContainer"]
layout_mode = 2
text = "Returning to lobby ..."
horizontal_alignment = 1

[node name="ServerDisconnected" type="MarginContainer" parent="CanvasLayer/MessageContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.5
offset_top = -105.0
offset_right = 270.5
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MessageContainer/ServerDisconnected"]
layout_mode = 2

[node name="Player" type="Label" parent="CanvasLayer/MessageContainer/ServerDisconnected/VBoxContainer"]
layout_mode = 2
text = "Server disconnected"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/MessageContainer/ServerDisconnected/VBoxContainer"]
layout_mode = 2
text = "Returning to main menu ..."
horizontal_alignment = 1
